[gd_scene load_steps=2 format=3 uid="uid://bcmuhrnjliwde"]

[ext_resource type="Script" uid="uid://1pl6aae4iwul" path="res://src/ui/GameOverScene.gd" id="1_4w0zy"]

[node name="GameOverScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4w0zy")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="GameOverContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverTitle" type="Label" parent="GameOverContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="GameOverContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="FinalScore" type="Label" parent="GameOverContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="GameOverContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="GameOverContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "PLAY AGAIN"

[node name="Spacer3" type="Control" parent="GameOverContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="GameOverContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "MAIN MENU"

[connection signal="pressed" from="GameOverContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="GameOverContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
